--- a/mia/Info.plist
+++ b/mia/Info.plist
@@ -47,5 +47,9 @@
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
 	</array>
+	<key>UIAppFonts</key>
+	<array>
+		<string>STHeiti-Light.TTF</string>
+	</array>
 </dict>
 </plist>
