--- a/mia/Info.plist
+++ b/mia/Info.plist
@@ -24,6 +24,17 @@
 	<string>1.5.0</string>
 	<key>CFBundleSignature</key>
 	<string>????</string>
+	<key>CFBundleURLTypes</key>
+	<array>
+		<dict>
+			<key>CFBundleTypeRole</key>
+			<string>Editor</string>
+			<key>CFBundleURLSchemes</key>
+			<array>
+				<string>wx4186c873e483443a</string>
+			</array>
+		</dict>
+	</array>
 	<key>CFBundleVersion</key>
 	<string>27</string>
 	<key>LSApplicationQueriesSchemes</key>
